--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
+
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
 
@@ -18,16 +19,19 @@
 
     <title>
       {{ page_title }}
-      {%- if current_tags %} &ndash; tagged "{{ current_tags | join: ', ' }}"{% endif -%}
-      {%- if current_page != 1 %} &ndash; Page {{ current_page }}{% endif -%}
-      {%- unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless -%}
+      {%- if current_tags %}
+        &ndash; tagged "{{ current_tags | join: ', ' }}"{% endif -%}
+      {%- if current_page != 1 %}
+        &ndash; Page {{ current_page }}{% endif -%}
+      {%- unless page_title contains shop.name %}
+        &ndash; {{ shop.name }}{% endunless -%}
     </title>
 
     {% if page_description %}
       <meta name="description" content="{{ page_description | escape }}">
     {% endif %}
 
-    {% render 'meta-tags' %}
+    {% render 'meta-tags', page_title: page_title %}
 
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
@@ -73,12 +77,12 @@
     <link data-n-head="ssr" data-hid="tk-style" rel="preload" as="style" href="https://use.typekit.net/ina3qzo.css">
     <link data-n-head="ssr" data-hid="tk-preconnect" rel="preconnect" href="https://use.typekit.net" crossorigin="">
     <script data-n-head="ssr" data-hid="tk-script">
-        (function() {
-          const tk_link = document.createElement('link');
-          tk_link.rel = "stylesheet";
-          tk_link.href = "https://use.typekit.net/ina3qzo.css";
-          document.querySelector("head").appendChild(tk_link);
-        })();
+      (function() {
+        const tk_link = document.createElement('link');
+        tk_link.rel = "stylesheet";
+        tk_link.href = "https://use.typekit.net/ina3qzo.css";
+        document.querySelector("head").appendChild(tk_link);
+      })();
     </script>
     <link rel="stylesheet" href="https://use.typekit.net/ina3qzo.css">
 
@@ -86,10 +90,11 @@
     {{ "main.css" | asset_url | stylesheet_tag }}
 
 
-    <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
-    if (Shopify.designMode) {
-      document.documentElement.classList.add('shopify-design-mode');
-    }
+    <script>
+      document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+      if (Shopify.designMode) {
+        document.documentElement.classList.add('shopify-design-mode');
+      }
     </script>
   </head>
 
@@ -97,6 +102,23 @@
     <a class="skip-to-content-link button hidden" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
     </a>
+
+    <!-- Facebook SDK -->
+    <div id="fb-root"></div>
+    <script>
+      (function(d, s, id) {
+        var js,
+          fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) 
+          return;
+        
+
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
 
     {%- render 'cart-drawer' -%}
 
@@ -140,14 +162,14 @@
       window.variantStrings = {
         addToCart: `{{ 'products.product.add_to_cart' | t }}`,
         soldOut: `{{ 'products.product.sold_out' | t }}`,
-        unavailable: `{{ 'products.product.unavailable' | t }}`,
+        unavailable: `{{ 'products.product.unavailable' | t }}`
       }
 
       window.accessibilityStrings = {
         imageAvailable: `{{ 'products.product.media.image_available' | t: index: '[index]' }}`,
         shareSuccess: `{{ 'general.share.success_message' | t }}`,
         pauseSlideshow: `{{ 'sections.slideshow.pause_slideshow' | t }}`,
-        playSlideshow: `{{ 'sections.slideshow.play_slideshow' | t }}`,
+        playSlideshow: `{{ 'sections.slideshow.play_slideshow' | t }}`
       }
     </script>
 
@@ -157,12 +179,9 @@
 
     <script src="https://a.klaviyo.com/media/js/onsite/onsite.js"></script>
     <script>
-        var klaviyo = klaviyo || [];
-        klaviyo.init({
-          account: "PUBLIC_API_KEY",
-          platform: "shopify"
-        });
-        klaviyo.enable("backinstock",{
+      var klaviyo = klaviyo || [];
+      klaviyo.init({account: "PUBLIC_API_KEY", platform: "shopify"});
+      klaviyo.enable("backinstock", {
         trigger: {
           product_page_text: "Notify Me When Available",
           product_page_class: "btn",
@@ -171,23 +190,23 @@
           replace_anchor: false
         },
         modal: {
-        headline: "{product_name}",
-        body_content: "Register to receive a notification when this item comes back in stock.",
-        email_field_label: "Email",
-        button_label: "Notify me when available",
-        subscription_success_label: "You're in! We'll let you know when it's back.",
-        footer_content: '',
-        additional_styles: "@import url('https://fonts.googleapis.com/css?family=Helvetica+Neue');",
-        drop_background_color: "#000",
-        background_color: "#fff",
-        text_color: "#222",
-        button_text_color: "#fff",
-        button_background_color: "#439fdb",
-        close_button_color: "#ccc",
-        error_background_color: "#fcd6d7",
-        error_text_color: "#C72E2F",
-        success_background_color: "#d3efcd",
-        success_text_color: "#1B9500"
+          headline: "{product_name}",
+          body_content: "Register to receive a notification when this item comes back in stock.",
+          email_field_label: "Email",
+          button_label: "Notify me when available",
+          subscription_success_label: "You're in! We'll let you know when it's back.",
+          footer_content: '',
+          additional_styles: "@import url('https://fonts.googleapis.com/css?family=Helvetica+Neue');",
+          drop_background_color: "#000",
+          background_color: "#fff",
+          text_color: "#222",
+          button_text_color: "#fff",
+          button_background_color: "#439fdb",
+          close_button_color: "#ccc",
+          error_background_color: "#fcd6d7",
+          error_text_color: "#C72E2F",
+          success_background_color: "#d3efcd",
+          success_text_color: "#1B9500"
         }
       });
     </script>
