--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -4,7 +4,12 @@
   {% endcapture %}
   {% assign ctaContent = ctaContent | replace: 'class="shopify-section"', 'class="shopify-section-nested"' %}
   {{ ctaContent }}
-</div{"name":"footer"} {% schema %}
+</div>
+{% schema %}
+  {
+    "name": "footer"
+  }
+{% endschema %}
 
 
 
