--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -30,53 +30,19 @@
 %}
 
 <div class="hero">
-  <div class="flex justify-between w-full py-s10 px-72">
-    <h1 class="faux-h3 pt-[6px]">Search Results</h1>
+  <div class="flex flex-wrap gap-y-s6 md:gap-y-s8 gap-x-s8 justify-between w-full py-s10 px-s5 sm:px-54 md:px-72">
+    <h1 class="faux-h3 text-primary-800 before:hidden">Search Results</h1>
     <div id="search-container" class="flex">
-      <input value="{{search.terms}}" class="search-input w-[382px] px-s4 py-s2 border-black-100 rounded-0 outline-none placeholder-black-600 border-[1px]">
-      <button class="search-submit btn btn--inverse btn--sm capitalize">Search Again</button>
+      <input value="{{search.terms}}" class="search-input w-[268px] md:w-[382px] px-s4 py-s2 border-black-100 rounded-0 outline-none placeholder-black-600 border-[1px]">
+      <button class="search-submit btn btn--dark btn--sm capitalize tracking-0">Search Again</button>
     </div>
   </div>
 </div>
-<div class="products">
-  <div class="px-72 pb-s13 flex gap-s10">
-    <div id="filtered-collection-grid" data-url="{{ search.url }}" data-section="{{ section.id }}" class="grid grid-cols-3 gap-s10 flex-1">
+<div class="products px-s5 sm:px-54 md:px-72 ">
+  <div class="max-w-[1112px] w-full mx-auto pb-s11 md:pb-s13 flex ">
+    <div id="filtered-collection-grid" data-url="{{ search.url }}" data-section="{{ section.id }}" class="grid grid-cols-2 lg:grid-cols-3 gap-x-s4 xs:gap-x-s8 gap-y-s8 md:gap-s10 flex-1">
       {% for product in search.results %}
-        <a class="product-tile flex-1 w-full relative text-left" href="{{ product.url }}" id="product-{{ product.id }}">
-          {% assign productBadgeType = null %}
-          {% for tag in product.tags %}
-            {% if badgeTags contains tag %}
-              {% assign productBadgeType = tag %}
-            {% endif %}
-          {% endfor %}
-          {% if productBadgeType %}
-            <div class="badge {{ productBadgeType | split: " " | join: "" }}">
-              {% if productBadgeType == "best seller" %}
-                {% render "best-seller-star" %}
-              {% endif %}
-              <p class="faux-h6 mr-[-2px]">
-                {{ productBadgeType | uppercase }}
-              </p>
-            </div>
-          {% endif %}
-          <div class="relative">
-            {{ product | image_url: width: 200 | image_tag: class: 'w-full aspect-[4/5] object-contain', loading: 'lazy' }}
-            <modal-opener data-modal="#ProductModal-{{ product.id }}" id="product-{{ product.id }}" class="quick-shop-opener absolute bottom-s8 mx-auto w-max left-1/2" style="transform:translateX(-50%)">
-              <button class="btn btn--sm inline-block">Quick Shop</button>
-            </modal-opener>
-          </div>
-          <div class="mt-s6">
-            <h3 class="faux-p-lg font-bold text-black-900">{{ product.title }}</h3>
-            {% comment %}
-              <p class="mt-s5 text-black-400 uppercase">Brand/Collection</p>
-            {% endcomment %}
-            <p class="mt-s5">${{ product.price | money_without_currency }}</p>
-            <div class="h-s6 flex items-center gap-s1 mt-s3">
-              {% render 'product-colors', product: product, size: 'sm', preview: true %}
-            </div>
-          </div>
-        </a>
-        {% render 'quick-shop-modal', product: product %}
+        {% render 'product-card', product: product %}
       {% endfor %}
     </div>
     <script id="collection-data" type="application/json">
