--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,9 +1,9 @@
 <div class="py-s4 px-s6 lg:px-[36px] flex justify-center md:justify-between items-center bg-primary-800 text-secondary-100 lg:gap-s7">
   <div class="flex-1 flex gap-s3 items-center text-secondary-600 to-md:hidden">
-    <a href="{{ settings.social_facebook_link }}">{% render '16-logo-facebook-simple' %}</a>
-    <a href="{{ settings.social_instagram_link }}">{% render '16-logo-instagram' %}</a>
-    <a href="{{ settings.social_tiktok_link }}">{% render '16-logo-tiktok' %}</a>
-    <a href="{{ settings.social_twitter_link }}">{% render '16-logo-twitter' %}</a>
+    <a href="{{ settings.social_facebook_link }}" class="transition-all hover:text-secondary-400">{% render '16-logo-facebook-simple' %}</a>
+    <a href="{{ settings.social_instagram_link }}" class="transition-all hover:text-secondary-400">{% render '16-logo-instagram' %}</a>
+    <a href="{{ settings.social_tiktok_link }}" class="transition-all hover:text-secondary-400">{% render '16-logo-tiktok' %}</a>
+    <a href="{{ settings.social_twitter_link }}" class="transition-all hover:text-secondary-400">{% render '16-logo-twitter' %}</a>
   </div>
   <div class="flex items-center">
     <div class="mr-s4 text-secondary-600">
@@ -17,6 +17,6 @@
     </div>
   </div>
   <div class="flex-1 flex justify-end items-center gap-s6 text-secondary-600 to-md:hidden">
-    <a href="/pages/help-and-faqs" class="to-lg:hidden">Help + FAQs</a>
+    <a href="/pages/help-and-faqs" class="to-lg:hidden transition-all hover:text-secondary-400">Help + FAQs</a>
   </div>
 </div>
