--- a/sections/main-404.liquid
+++ b/sections/main-404.liquid
@@ -4,7 +4,7 @@
     <p class="mt-s7 faux-p-lg text-center text-primary-800">
       SOS! The page you are looking for no longer exists.
     </p>
-    <a href="{{ routes.all_products_collection_url }}" class="text-center btn btn--filled-inverse btn--sm mt-s10 mx-auto">
+    <a href="/" class="text-center btn btn--filled-inverse btn--sm mt-s10 mx-auto">
       Abandon Ship
     </a>
   </div>
