--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -10,6 +10,7 @@
                 if topLevelLink.current
                     assign menu = linklist.handle
                     assign topLevel = topLevelLink.handle
+                    assign secondLevelLinks = topLevelLink.links
                     assign current = topLevelLink.handle
                     assign currentTitle = topLevelLink.title
                 endif
@@ -17,6 +18,7 @@
                     if secondLevelLink.current
                         assign menu = linklist.handle
                         assign topLevel = topLevelLink.handle
+                        assign secondLevel = secondLevelLink.handle
                         assign current = secondLevelLink.handle
                         assign currentTitle = secondLevelLink.title
                     endif
@@ -27,41 +29,80 @@
             endif
         endif
     endfor
+
+
 %}
+{% capture colors %}
+  {%- for coll in collections -%}
+    {%- if coll.metafields.custom.color -%}
+      {{- coll.title | downcase -}}:{{- coll.metafields.custom.color -}},
+    {%- endif -%}
+  {%- endfor -%}
+{% endcapture %}
+
 
 <div class="hero">
   {% if collection.image %}
-    <div class="relative flex justify-center">
-      <img src="{{ collection.image | image_url }}" class="h-[526px] w-full object-cover"/>
-      <h1 class="absolute bottom-s11 w-full px-s10 max-w-[1416px] text-white">{{ currentTitle }}</h1>
+    <div class="relative flex justify-center bg-primary-800">
+      <img src="{{ collection.image | image_url }}" class="h-[151px] xs:h-[382px] lg:h-[526px] w-full object-cover"/>
+      <h1 class="absolute bottom-s11 w-full px-s10 max-w-[1416px] text-white to-lg:hidden">{{ currentTitle }}</h1>
     </div>
   {% endif %}
-  <div class="flex {% if collection.image %}justify-end{% else %}justify-between{% endif %} w-full py-s10 px-72">
-    <div class="heading flex justify-between items-center to-lg:w-full">
-      {% unless collection.image %}
-        <h1 class="faux-h3 pt-[6px]">{{ currentTitle }}</h1>
-        {{ search }}
-      {% endunless %}
-      <button class="btn btn--sm lg:hidden capitalize tracking-0">Filter & Sort</button>
+  <div class="flex to-lg:flex-col {% if collection.image %}justify-end{% else %}justify-between{% endif %} w-full py-s10 px-s5 sm:px-54 md:px-72">
+    <div class="heading flex {% unless secondLevel %}to-sm:flex-col items-stretch{% endunless %} justify-between items-center to-lg:w-full to-lg:flex-wrap gap-y-s5 md:gap-y-s8 gap-x-s8">
+      <h1 class="faux-h3 before:hidden after:hidden {% if collection.image %}lg:hidden{% endif %}">{{ currentTitle }}</h1>
+      <div class="flex flex-1 basis-auto justify-end gap-s4 ">
+        {% unless secondLevel %}
+          <label for="collection" class="relative flex items-center text-black-800 w-full sm:w-[261px] to-sm:min-w-[240px] lg:hidden">
+            <select class="filter w-full" name="collection">
+              <option selected disabled value="color">Shop By Category</option>
+              {% for link in secondLevelLinks %}
+                <option value="{{ link.url }}">{{ link.title }}</option>
+              {% endfor %}
+
+            </select>
+            {% render '8-down', class: 'text-black-200 absolute right-0' %}
+          </label>
+        {% endunless %}
+        <button id="mobileFilterToggle" class="btn btn--sm lg:hidden capitalize tracking-0 shrink-0">Filter & Sort</button>
+      </div>
     </div>
-    <div id="filtered-collection-filters" class="flex gap-s6 to-lg:hidden">
+    <div id="mobileSelectedFilterContainer" class="flex gap-s3 lg:hidden">
+      <div id="selectedColor" class="px-s3 py-s3 flex items-center gap-s2 bg-black-50 mt-s7 hidden">
+        <div class="rounded-full border-[1px] border-black-200 w-[10px] h-[10px] color-swatch"></div>
+        <p class="text-black-600 indicator-label">Color</p>
+        <button id="removeColorFilterButton" class="remove-filter-button" data-close="color">
+          {% render '8-close', class: "text-black-400" %}
+        </button>
+      </div>
+      <div id="selectedSize" class="px-s3 py-s3 flex items-center gap-s2 bg-black-50 mt-s7 hidden">
+        <p class="text-black-600 indicator-label">Size</p>
+        <button id="removeSizeFilterButton" class="remove-filter-button" data-close="size">
+          {% render '8-close', class: "text-black-400" %}
+        </button>
+      </div>
+      <button class="hidden mt-s7 clear-filters inline-link faux-p-sm">Clear All</button>
+    </div>
+    <div id="filtered-collection-filters" class="flex to-lg:flex-col gap-s4 md:gap-s6 to-lg:mt-s7 to-lg:hidden">
       <label for="color" class="relative flex items-center text-black-800">
-        <select class="filter" name="color" data-filter="Color">
-          <option selected disabled value="color">Color</option>
+        <select class="filter to-lg:w-full" name="color" data-filter="Color">
+          <option selected disabled value="">Color</option>
           <option value="all">All Colors</option>
         </select>
         {% render '8-down', class: 'text-black-200 absolute right-0' %}
       </label>
       <label for="size" class="relative flex items-center text-black-800">
-        <select class="filter" name="size" data-filter="Size">
-          <option selected disabled value="size">Size</option>
+        <select class="filter to-lg:w-full" name="size" data-filter="Size">
+          <option selected disabled value="">Size</option>
           <option value="all">All Sizes</option>
         </select>
         {% render '8-down', class: 'text-black-200 absolute right-0' %}
       </label>
       <label for="sort" class="relative flex items-center text-black-800">
-        <select class="sort" name="sort">
+        <select class="sort to-lg:w-full" name="sort">
           <option selected disabled value="sort">Sort</option>
+          <option value="price-low-high">Price (Low - High)</option>
+          <option value="price-high-low">Price (High - Low)</option>
         </select>
         {% render '8-down', class: 'text-black-200 absolute right-0' %}
       </label>
@@ -69,9 +110,9 @@
   </div>
 </div>
 <div class="products">
-  <div class="px-72 pb-s13 flex gap-s10">
+  <div class="px-s5 sm:px-54 md:px-72 pb-s11 md:pb-s13 flex gap-s10">
     {% if menu %}
-      <div class="w-s13 flex-none">
+      <div class="w-s13 flex-none to-lg:hidden">
         <ul>
           {% for topLevelLink in linklists[menu].links %}
             <li class="sidebar-link top-level">
@@ -98,7 +139,7 @@
         </ul>
       </div>
     {% endif %}
-    <div id="filtered-collection-grid" data-url="{{ collection.url }}" data-section="{{ section.id }}" class="grid grid-cols-3 gap-s10 flex-1">
+    <div id="filtered-collection-grid" data-url="{{ collection.url }}" data-section="{{ section.id }}" class="grid grid-cols-2 lg:grid-cols-3  gap-x-s4 xs:gap-x-s8 gap-y-s8 md:gap-s10 flex-1">
       {% for product in collection.products %}
         {% render 'product-card', product: product %}
       {% endfor %}
@@ -106,6 +147,7 @@
     <script id="collection-data" type="application/json">
       {{ collection.products | json }}
     </script>
+    <script id="all-collections-data" type="application/text">{{ colors | strip }}</script>
   </div>
 </div>
 
