--- a/snippets/footer-main.liquid
+++ b/snippets/footer-main.liquid
@@ -1,50 +1,69 @@
 <div class="max-w-[1440px] mx-auto">
-    <div class="pt-s10">
-        <div class="flex justify-between items-center px-36 lg:px-72">
-            <p class="faux-h6 text-black-500 ">Tag us in your photos!</p>
-            <a class="btn btn--sm btn--borderless to-md:hidden">Follow us on instagram</a>
-        </div>
-        <style> .tagembed-container iframe{min-height:unset !important;}</style>
-        <div class="tagembed-container px-36 lg:px-72 mt-s6 !h-auto" style=" width:100%;height:100%;overflow: auto;"><div class="tagembed-socialwall !h-auto" data-wall-id="65720" view-url="https://widget.tagembed.com/65720"></div><script src="https://widget.tagembed.com/embed.min.js" type="text/javascript" defer></script></div>
-        <div class="text-right px-36 mt-s5 md:hidden">
-            <a class="btn btn--sm btn--borderless">Follow us on instagram</a>
-        </div>
+  <div class="pt-s10">
+    <div class="flex justify-between items-center px-36 lg:px-72">
+      <p class="faux-h6 text-black-500 ">Tag us in your photos!</p>
+      <a class="btn btn--sm btn--borderless to-md:hidden" href="{{ settings.social_instagram_link }}">Follow us on instagram</a>
     </div>
-    <div class="px-36 lg:px-72 pt-s12 pb-s9 md:py-s10 flex to-md:flex-col gap-s11 md:gap-s8 lg:gap-s14 justify-between">
-        <div class="max-w-[600px]">
-            <p class="faux-h4 text-primary-800">Be the first to know about promotions and new products—plus, get 15% off your first purchase!</p>
-            <input class="mt-s7 w-full" placeholder="Enter your email to get our newsletter"></input>
-        </div>
-        <div class="flex gap-s8 lg:gap-s10">
-            <div>
-                <h3 class="ui-sm uppercase text-primary-800">Contact</h3>
-                <a href="mailto:{{ settings.email }}" class="block faux-p-sm text-black-600 mt-s7">{{ settings.email }}</a>
-                <a href="tel:{{ settings.phone_number | remove: "-" | remove: "." | remove: "(" | remove: ")" | remove: " " }}" class="block faux-p-sm text-black-600 mt-s6">{{ settings.phone_number}}</a>
-                <p class="faux-p-sm text-black-600 mt-s6">{{ settings.address | newline_to_br }}</p>
-            </div>
-            <div class="w-max">
-                <h3 class="ui-sm uppercase text-primary-800">Customer Service</h3>
-                <a href="/pages/customer-service" class="block faux-p-sm text-black-600 mt-s7">Customer Service</a>
-                <a href="/pages/help-and-faqs" class="block faux-p-sm text-black-600 mt-s6">Help / FAQ</a>
-                <a href="/pages/help-and-faqs#returnsAndExchanges" class="block faux-p-sm text-black-600 mt-s6">Returns & Exchanges</a>
-                <a href="/pages/help-and-faqs#giftCards" class="block faux-p-sm text-black-600 mt-s6">Gift Cards</a>
-            </div>
-        </div>
+    <style>
+      .tagembed-container iframe {
+        min-height: unset !important;
+      }
+      .theme4_poweredBy {
+        display: none;
+      }
+    </style>
+    <div class="tagembed-container px-36 lg:px-72 mt-s6" style=" width:100%;height:100%;overflow: auto;">
+      <div class="tagembed-socialwall !h-auto" data-wall-id="65720" view-url="https://widget.tagembed.com/65720"></div>
+      <script src="https://widget.tagembed.com/embed.min.js" type="text/javascript"></script>
     </div>
-    <div class="mx-36" style="border-top: 1px solid rgba(178, 178, 177, .2);"></div>
-    <div class="px-s5 md:px-s6 lg:px-36 pt-s8 pb-s6 md:py-s6 flex to-md:flex-col-reverse items-center gap-s8 md:gap-s10" >
-        <div class="flex-1 flex items-center gap-s4">
-            <p class="text-black-500 faux-p-xs">© 2022 Shop the Wharf. All Rights Reserved.</p>
-            <div class="h-s5 w-[2px] bg-primary-50"></div>
-            <a href="/pages/privacy-policy" class="text-black-500 faux-p-xs shrink-0">Privacy Policy</a>
-        </div>
-        <div class="h-s6 flex gap-s4 text-primary-800">
-            <a href="{{ settings.social_facebook_link }}">{% render '24-logo-facebook-simple' %}</a>
-            <a href="{{ settings.social_linkedin_link }}">{% render '24-logo-linkedin-simple' %}</a>
-            <a href="{{ settings.social_twitter_link }}">{% render '24-logo-twitter' %}</a>
-        </div>
-        <div class="flex-1 flex justify-end ">
-            <img src="{{ 'Logo-Wharf-Stacked.svg' | asset_url }}" alt="The Wharf Store">
-        </div>
+    <div class="text-right px-36 mt-s5 md:hidden">
+      <a class="btn btn--sm btn--borderless">Follow us on instagram</a>
     </div>
+  </div>
+  <div class="px-36 lg:px-72 pt-s12 pb-s9 md:py-s10 flex to-md:flex-col gap-s11 md:gap-s8 lg:gap-s14 justify-between">
+    <div class="max-w-[600px]">
+      <p class="faux-h4 text-primary-800">Be the first to know about promotions and new products—plus, get 15% off your first purchase!</p>
+      <div class="relative">
+        <form id="email_signup" action="https://manage.kmail-lists.com/subscriptions/subscribe?a=WUN3cr&g=UAW7nW" method="POST" class="mt-s7 w-full btn--borderless py-0 flex">
+          <input type="hidden" name="g" value="UAW7nW">
+          <input type="email" value="" name="email" id="k_id_email" placeholder="Enter your email to get our newsletter" class="py-s2 mb-s1 outline-none w-full mr-s3"/>
+          <button type="submit">
+            {% render '12-right-arrow', class: "text-secondary-300" %}
+          </button>
+        </form>
+        <script type="text/javascript" src="//www.klaviyo.com/media/js/public/klaviyo_subscribe.js"></script>
+      </div>
+    </div>
+    <div class="flex gap-s8 lg:gap-s10">
+      <div>
+        <h3 class="ui-sm uppercase text-primary-800">Contact</h3>
+        <a href="mailto:{{ settings.email }}" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all mt-s7">{{ settings.email }}</a>
+        <a href="tel:{{ settings.phone_number | remove: "-" | remove: "." | remove: "(" | remove: ")" | remove: " " }}" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all mt-s6">{{ settings.phone_number}}</a>
+        <a href="https://www.google.com/maps/place/The+Wharf/@30.2930875,-87.631064,17z/data=!3m1!4b1!4m5!3m4!1s0x889a05adb6d2fbbd:0x30b0a172c0e610ce!8m2!3d30.2930829!4d-87.6288753" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all mt-s6">{{ settings.address | newline_to_br }}</a>
+      </div>
+      <div class="w-max">
+        <h3 class="ui-sm uppercase text-primary-800">Customer Service</h3>
+        <a href="/pages/customer-service" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all transition-all mt-s7">Customer Service</a>
+        <a href="/pages/help-and-faqs" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all mt-s6">Help / FAQ</a>
+        <a href="/pages/help-and-faqs#returnsAndExchanges" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all mt-s6">Returns & Exchanges</a>
+        <a href="/pages/help-and-faqs#giftCards" class="block faux-p-sm text-black-600 hover:text-black-700 transition-all mt-s6">Gift Cards</a>
+      </div>
+    </div>
+  </div>
+  <div class="mx-36" style="border-top: 1px solid rgba(178, 178, 177, .2);"></div>
+  <div class="px-s5 md:px-s6 lg:px-36 pt-s8 pb-s6 md:py-s6 flex to-md:flex-col-reverse items-center gap-s8 md:gap-s10">
+    <div class="flex-1 flex items-center gap-s4">
+      <p class="text-black-500 faux-p-xs">© 2022 Shop the Wharf. All Rights Reserved.</p>
+      <div class="h-s5 w-[2px] bg-primary-50"></div>
+      <a href="/pages/privacy-policy" class="text-black-500 hover:text-black-700 transition-all faux-p-xs shrink-0">Privacy Policy</a>
+    </div>
+    <div class="h-s6 flex gap-s4 text-primary-800">
+      <a href="{{ settings.social_facebook_link }}">{% render '24-logo-facebook-simple' %}</a>
+      <a href="{{ settings.social_linkedin_link }}">{% render '24-logo-linkedin-simple' %}</a>
+      <a href="{{ settings.social_twitter_link }}">{% render '24-logo-twitter' %}</a>
+    </div>
+    <div class="flex-1 flex justify-end ">
+      <img src="{{ 'Logo-Wharf-Stacked.svg' | asset_url }}" alt="The Wharf Store">
+    </div>
+  </div>
 </div>
